--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 Introduction:
 
-The purpose of this project is to faciliate the deployment of network monitoring system.
+The purpose of this project is to faciliate the deployment of a network monitoring system.
