--- a/README
+++ b/README
@@ -1,3 +1,16 @@
-Introduction:
+# chaos-ids
 
-The purpose of this project is to faciliate the deployment of a network monitoring system.
+This is a placeholder repo. No significant work has been done on this project yet.
+
+<b>Roadmap</b>
+
+The purpose of this project is to make security as easy as possible. The tools to enforce security policy, monitor networks,
+enforce compliance etc already exist. But they require a high degree of expertise and intelligence to use. The purpose of this
+tool is to make it as easy as possible to deploy said tools and configure them correctly. For now, I am focusing on IDS systems
+and getting them deployed and configured correctly to maximize security posture.
+
+<br>
+<br>
+<b>Contact:</b>
+
+Michael Feneley: mfeneley(at)vt.edu
